# amplifierd-plugin-chat

./: pyproject.toml
src/chat_plugin/: commands.py  config.py  pin_storage.py  routes.py  session_history.py
src/chat_plugin/static/: index.html  vendor.js
tests/: test_commands.py  test_config.py  test_pin_storage.py  test_routes.py  test_session_history.py
